--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
     }
 }
 repositories {
+    google()
     mavenCentral()
     jcenter()
 }
@@ -43,6 +44,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation('androidx.appcompat:appcompat:1.3.0-rc01')
     implementation('androidx.appcompat:appcompat-resources:1.3.0-rc01')
+
     //noinspection GradleCompatible,GradleCompatible
     implementation('com.android.support:preference-v7:28.0.0')
 
@@ -51,6 +53,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore:22.1.2'
+    implementation 'com.google.firebase:firebase-messaging:21.1.0'
     implementation 'com.google.firebase:firebase-database:19.7.0'
     implementation 'com.google.firebase:firebase-storage:19.2.2'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
@@ -61,5 +64,18 @@ dependencies {
 
     //Bottom Navigation
     implementation 'com.etebarian:meow-bottom-navigation:1.3.1'
+
+    //Image slider
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //volley
+    implementation("com.android.volley:volley:1.1.1")
 
 }
