--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     //Image slider
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -77,5 +78,8 @@ dependencies {
 
     //volley
     implementation("com.android.volley:volley:1.1.1")
+
+    //Circle image view
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
