--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,15 +35,15 @@ repositories {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'org.jetbrains:annotations:15.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation('androidx.appcompat:appcompat:1.3.0-rc01')
-    implementation('androidx.appcompat:appcompat-resources:1.3.0-rc01')
+    implementation('androidx.appcompat:appcompat:1.4.0-alpha01')
+    implementation('androidx.appcompat:appcompat-resources:1.4.0-alpha01')
 
     //noinspection GradleCompatible,GradleCompatible
     implementation('com.android.support:preference-v7:28.0.0')
@@ -52,15 +52,15 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-firestore:22.1.2'
+    implementation 'com.google.firebase:firebase-firestore:23.0.0'
     implementation 'com.google.firebase:firebase-messaging:21.1.0'
-    implementation 'com.google.firebase:firebase-database:19.7.0'
-    implementation 'com.google.firebase:firebase-storage:19.2.2'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     //Facebook
-    implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
-    implementation 'com.facebook.android:facebook-login:[8.1)'
+    implementation 'com.facebook.android:facebook-android-sdk:8.2.0'
+    implementation 'com.facebook.android:facebook-login:8.2.0'
 
     //Bottom Navigation
     implementation 'com.etebarian:meow-bottom-navigation:1.3.1'
@@ -77,7 +77,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //volley
-    implementation("com.android.volley:volley:1.1.1")
+    implementation("com.android.volley:volley:1.2.0")
 
     //Circle image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
