--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_logo1"
         android:supportsRtl="true"
         android:theme="@style/Theme.FindFood">
-        <activity android:name=".EditProfile"></activity>
+        <activity android:name=".GiaoDichActivity"></activity>
+        <activity android:name=".EditProfile" />
         <activity android:name=".FoodProductActivity" />
         <activity android:name=".MessegerActivity" />
         <activity android:name=".ThanhToanActivity" />
